--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
 
 <body>
     <h1>99TECH SCANNER</h1>
-    <video id="video" width="auto" height="auto" class="img-thumbnail" autoplay></video>
+    <video id="video" width="100%" autoplay></video>
     <canvas id="canvas" style="display:none;"></canvas>
-    <button type="button" class="btn btn-primary btn-lg btn-block">Lấy thông tin</button>
-    <button type="button" class="btn btn-secondary btn-lg btn-block">Hủy đơn hàng</button>
     <script src="script.js"></script>
-    <script src="jsQR.js"></script>
 </body>
 
 </html>
