--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <title>QR Scanner</title>
+    <title>QR Code Scanner</title>
 </head>
-
 <body>
-    <h1>99TECH SCANNER</h1>
-    <video id="video" width="100%" autoplay></video>
-    <canvas id="canvas" style="display:none;"></canvas>
-    <script src="script.js"></script>
+    <h1>QR Code Scanner</h1>
+    <div id="qr-reader"></div>
+    <input type="text" id="result" readonly>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <script>
+        const qrCodeReader = new QCodeDecoder();
+        qrCodeReader.decodeFromCamera(document.getElementById('qr-reader'), (err, result) => {
+            if (err) return console.error(err);
+            document.getElementById('result').value = result;
+        });
+    </script>
 </body>
-
 </html>
