--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>99TECH MANAGEMENT</h1>
         </div>
         <div class="row">
-            <video id="video" width="auto" height="auto" class="img-thumbnail" autoplay></video>
+            <video id="video" width="90%" height="90%" class="img-thumbnail" autoplay></video>
             <canvas id="canvas" style="display:none;"></canvas>
         </div>
         <br>
