--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
                 <br>
-                <button type="button" class="btn btn-primary">Lưu thông tin đơn hàng</button>
+                <button type="button" id="sendButton" class="btn btn-primary">Lưu thông tin đơn hàng</button>
                 <button type="button" class="btn btn-danger">Hủy đơn hàng</button>
             </form>
         </div>
