--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <h1>99TECH MANAGEMENT</h1>
         </div>
         <div class="row">
+            <button id="toggleCameraButton" class="btn btn-info">Bật/Tắt Camera</button>
+        </div>
+        <div class="row" id="cam-scan" style="display: none;">
             <video id="video" width="90%" height="90%" class="img-thumbnail" autoplay></video>
             <canvas id="canvas" style="display:none;"></canvas>
         </div>
