--- a/index.html
+++ b/index.html
@@ -28,29 +28,29 @@
         <div class="row">
             <form>
                 <div class="form-group">
-                    <label for="exampleFormControlInput1">Mã đơn hàng</label>
-                    <input class="form-control" type="text" placeholder="Lấy từ mã QR" readonly>
+                    <label for="ordercode">Mã đơn hàng</label>
+                    <input class="form-control" type="text" id="ordercode" placeholder="Lấy từ mã QR" readonly>
                 </div>
                 <div class="form-group">
-                    <label for="exampleFormControlInput1">SĐT Khách hàng</label>
-                    <input class="form-control" type="text" placeholder="0777393715">
+                    <label for="phonenumber">SĐT Khách hàng</label>
+                    <input class="form-control" type="text" id="phonenumber" placeholder="0777393715">
                 </div>
                 <div class="form-group">
-                    <label for="exampleFormControlInput1">Email khách hàng</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                    <label for="emailcustomer">Email khách hàng</label>
+                    <input type="email" class="form-control" id="emailcustomer"
                         placeholder="htkh@99tech.com">
                 </div>
                 <div class="form-group">
-                    <label for="exampleFormControlSelect1">Sản phẩm bảo hành</label>
-                    <select class="form-control" id="exampleFormControlSelect1">
+                    <label for="products">Sản phẩm bảo hành</label>
+                    <select class="form-control" id="products">
                         <option>8GB</option>
                         <option>16GB</option>
                         <option>32GB</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Ghi chú đơn hàng</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <label for="ordernote">Ghi chú đơn hàng</label>
+                    <textarea class="form-control" id="ordernote" rows="3"></textarea>
                 </div>
                 <br>
                 <button type="button" id="sendButton" class="btn btn-primary">Lưu thông tin đơn hàng</button>
