--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                     </select>
                 </div>
                 <div class="form-group">
+                    <label for="time-guarantee">Thời gian bảo hành (tháng)</label>
+                    <input class="form-control" type="number" id="time-guarantee" placeholder="12 tháng">
+                </div>
+                <div class="form-group">
                     <label for="ordernote">Ghi chú đơn hàng</label>
                     <textarea class="form-control" id="ordernote" rows="3"></textarea>
                 </div>
