--- a/index.html
+++ b/index.html
@@ -4,67 +4,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>QR Code Scanner</title>
+    <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <title>99Tech Management Software</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row" style="text-align: center;">
-            <h1>99TECH MANAGEMENT</h1>
+    <h1>QR Code Scanner</h1>
+    <div id="qrResult"></div>
+    <div id="qrReader"></div>
+    <form>
+        <div class="form-group">
+            <label for="ordercode">Mã đơn hàng</label>
+            <input id="ordercode" class="form-control" type="text" placeholder="Ví dụ: 99TECH-001">
+            <small id="ordercode" class="form-text text-muted">Tự động lấy từ mã QR</small>
         </div>
-        <div class="row">
-            <button id="toggleCameraButton" class="btn btn-info">Bật/Tắt Camera</button>
+        <div class="form-group">
+            <label for="order-name">Tên khách hàng</label>
+            <input id="order-name" class="form-control" type="text" placeholder="Ví dụ: Trần Bảo Quốc">
+            <small id="order-name" class="form-text text-muted">Tự động lấy từ mã QR</small>
         </div>
-        <div class="row" id="cam-scan" style="display: none;">
-            <video id="video" width="90%" height="90%" class="img-thumbnail" autoplay></video>
+        <div class="form-group">
+            <label for="customer-email">Email khách hàng</label>
+            <input type="email" class="form-control" id="customer-email" aria-describedby="emailHelp"
+                placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">Nhập email để gửi thông tin bảo hành</small>
         </div>
-        <canvas id="canvas" style="display:none;"></canvas>
+        <div class="form-group">
+            <label for="exampleFormControlTextarea1">Ghi chú cho đơn hàng</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
         <br>
-        <div class="row">
-            <form>
-                <div class="form-group">
-                    <label for="ordercode">Mã đơn hàng</label>
-                    <input class="form-control" type="text" id="ordercode" placeholder="Lấy từ mã QR" readonly>
-                </div>
-                <div class="form-group">
-                    <label for="phonenumber">SĐT Khách hàng</label>
-                    <input class="form-control" type="text" id="phonenumber" placeholder="0777393715">
-                </div>
-                <div class="form-group">
-                    <label for="emailcustomer">Email khách hàng</label>
-                    <input type="email" class="form-control" id="emailcustomer"
-                        placeholder="htkh@99tech.com">
-                </div>
-                <div class="form-group">
-                    <label for="products">Sản phẩm bảo hành</label>
-                    <select class="form-control" id="products">
-                        <option>8GB</option>
-                        <option>16GB</option>
-                        <option>32GB</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="time-guarantee">Thời gian bảo hành (tháng)</label>
-                    <input class="form-control" type="number" id="time-guarantee" placeholder="12 tháng">
-                </div>
-                <div class="form-group">
-                    <label for="ordernote">Ghi chú đơn hàng</label>
-                    <textarea class="form-control" id="ordernote" rows="3"></textarea>
-                </div>
-                <br>
-                <button type="button" id="sendButton" class="btn btn-primary">Lưu thông tin đơn hàng</button>
-                <button type="button" class="btn btn-danger">Hủy đơn hàng</button>
-            </form>
-        </div>
-    </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    <script>
+        // Tạo một phần tử video cho Instascan
+        let video = document.createElement('video');
+        video.setAttribute('id', 'preview');
+        video.setAttribute('class', 'img-thumbnail');
+        document.getElementById('qrReader').appendChild(video);
 
-    <script src="script.js"></script>
-    <script src="jsQR.js"></script>
+        // Tạo một đối tượng Instascan để quét mã QR
+        let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
+
+        // Xử lý khi quét được mã QR
+        scanner.addListener('scan', function (content) {
+            // Hiển thị nội dung của mã QR trong cửa sổ cảnh báo
+            alert('QR Code Content: ' + content);
+            console.log('Dữ liệu:' + content)
+            document.getElementById('ordercode').value = content;
+        });
+
+        // Khởi động máy quét
+        Instascan.Camera.getCameras().then(cameras => {
+            if (cameras.length > 0) {
+                scanner.start(cameras[0]);
+            } else {
+                console.error('No cameras found.');
+            }
+        }).catch(err => {
+            console.error(err);
+        });
+    </script>
 </body>
 
 </html>
